[project]
name = "cheapllm"
version = "0.2.0"
description = "廉价、可定制的大语言模型开发工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
cheapllm = "cheapllm.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
